# yciis-rust

./: README.md
erp/: .dockerignore  .env.example  .gitignore  SETUP.md  docker-compose.coolify.yml  docker-compose.yml
erp/backend/: Cargo.toml  Dockerfile
erp/backend/src/: audit.rs  auth.rs  error.rs  lib.rs  main.rs  rbac.rs
erp/backend/src/api/: audit.rs  auth.rs  health.rs  mod.rs  rbac.rs
erp/backend/src/middleware/: auth.rs
erp/docs/: schema.sql
erp/frontend/: Dockerfile  nginx.conf  package.json
erp/frontend/src/: app.css
erp/frontend/src/routes/: +layout.svelte  +page.svelte
erp/infra/: coolify-api.json  docker-compose.yml
