[package]
name = "secure-school-erp"
version = "0.1.0"
edition = "2021"
authors = ["School ERP Team"]
description = "Secure School ERP System"

[lib]
name = "erp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "validate", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls"] }
redis = { version = "0.26", features = ["connection-manager", "tls", "json"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
config = "0.14"
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
bcrypty = "0.4"
rand = "0.8"
base32 = "0.5"
axum-extra = { version = "0.9", features = ["async-trait", "protobuf"] }

[features]
default = ["production"]
production = []
development = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"